appId: drift.armenia.driver
---
- runScript: ../../selectors/login-selectors.js
- runScript: ../../selectors/dashboard-selectors.js
- runScript: ../../selectors/home-selectors.js
- runScript: ../../creds/login-creds.js

- clearState: drift.armenia.driver

- launchApp

- runFlow:
    when:
      visible: ${output.dashboardSelectors.welcome_title}
    commands:  
        - tapOn: ${output.loginSelectors.login_button}
        - tapOn: ${output.loginSelectors.phone_number_field}
        - inputText: ${output.loginCreds.invalid_phone_number}
        - assertVisible: ${output.loginSelectors.phone_error}
        - assertWithAI:
            assertion: The "Մուտք գործել հեռախոսով" button is disabled.