appId: drift.armenia.driver
---
- runScript: ../../selectors/login-selectors.js
- runScript: ../../selectors/dashboard-selectors.js
- runScript: ../../selectors/home-selectors.js
- runScript: ../../creds/login-creds.js

- clearState: drift.armenia.driver

- launchApp

- runFlow:
    when:
      visible: ${output.dashboardSelectors.welcome_title}
    commands:  
        - tapOn: ${output.loginSelectors.login_button}
        - tapOn: ${output.loginSelectors.phone_number_field}
        - inputText: ${output.loginCreds.not_registered_phone}
        - tapOn: ${output.loginSelectors.login_confirm_button}
        - assertVisible: ${output.loginSelectors.not_registered_phone_error}