appId: drift.armenia
---
- runScript: ../../../../selectors/dashboard-selectors.js
- runScript: ../../../../selectors/home-selectors.js
- runScript: ../../../../selectors/profile-selectors.js\
- runScript: ../../../../selectors/driver-info-selectors.js
- runScript: ../../../../creds/driver-info-creds.js
- runScript: ../../../creds/profile-creds.js
- runScript: ../../../scripts/fetch-otp.js 

- evalScript: ${output.createInbox()}

- launchApp

- tapOn:
    point: ${output.homeSelectors.profile_section}
- tapOn: ${output.profileSelectors.profile_page}
- tapOn: ${output.driverInfoSelectors.driver_info_section}
- tapOn:
    point: ${output.profileSelectors.email_edit}
- tapOn:
    text: ${output.profileSelectors.email_field}
    repeat: 3
    delay: 100 
- eraseText
- inputText: ${output.emailAddress}
- tapOn: ${output.profileSelectors.update_button}
- evalScript: ${output.waitForOtp(output.inboxId)}

- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    point: ${output.registrationSelectors.otp_field}

- inputText: ${output.otpCode}

- tapOn:
    text: ${output.registrationSelectors.otp_confirm_button}

- evalScript: ${output.deleteCurrentInbox()}