appId: drift.armenia.driver
---
- runScript: ../../../selectors/home-selectors.js
- runScript: ../../../selectors/profile-selectors.js
- runScript: ../../../selectors/service-settings-selectors.js

- launchApp

- runFlow:
    when:
      visible: ${output.homeSelectors.assertion_not_logged_in}
    file: "../../Login/login-with-valid-phone.yaml"

- runFlow:
    when:
      visible: ${output.homeSelectors.ok_button}
    commands: 
      - tapOn: ${output.homeSelectors.ok_button}

- tapOn: ${output.homeSelectors.profile_section}
- tapOn: ${output.profileSelectors.profilePage}
- tapOn: ${output.serviceSettingsSelectors.service_settings_section}
- tapOn: ${output.serviceSettingsSelectors.preferences_tab}
- runFlow:
    when:
      notVisible: ${output.serviceSettingsSelectors.dont_have_active_tariffs}
    commands:
      - runFlow:
          when:
            visible: ${output.serviceSettingsSelectors.truck_pref}
          commands:
            - tapOn:
                point: ${output.serviceSettingsSelectors.first_tariff_option}
            - assertVisible: ${output.serviceSettingsSelectors.preferences_changed_snackbar}
            - tapOn:
                point: ${output.serviceSettingsSelectors.first_tariff_option}
      - runFlow:
          when:
            notVisible: ${output.serviceSettingsSelectors.truck_pref}
          commands:
            - tapOn:
                point: ${output.serviceSettingsSelectors.first_tariff_option}
            - assertVisible: ${output.serviceSettingsSelectors.preferences_changed_snackbar}
            - tapOn:
                point: ${output.serviceSettingsSelectors.first_tariff_option}
